syntax = "proto3";

option go_package=".;proto";

message OrderRequest {
  string orderId = 1;
  int64 timeTmp = 2;
}

message OrderInfo {
  string orderId = 1;
  string orderName =2;
  string orderStatus =3;
}

service OrderService {
  rpc GetOrderInfo (OrderRequest) returns (OrderInfo);
}
